--- a/test/index.html
+++ b/test/index.html
@@ -57,11 +57,11 @@
         start();
     });
     // filterAddRemove()
-    // startCamera();
     // filterAddRemove(action, tryonPayload);
- 
+    
     document.addEventListener('init', (data) => {
-        filterAddRemove("add", tryon_payload);
+        // filterAddRemove("add", tryon_payload);
+        startCamera();
     });
 </script>
 
